# University

./: .gitignore  README.md
android/: README.md
android/homework1/: local.properties
android/homework1/app/: build.gradle
android/homework1/app/src/main/: AndroidManifest.xml
android/homework1/gradle/wrapper/: gradle-wrapper.properties
android/homework5/app/src/main/: AndroidManifest.xml
coding_theory/: Block2.ipynb  Block2.pages  Block2Task2.ipynb  Block2Task7.ipynb  Block3.ipynb  Block3.pages  Block4.ipynb  Block4Additional.ipynb  Block4Task4.ipynb  Block5.ipynb  Block5Task1AllCodes.rtf  Block7.ipynb  Block7Resort.ipynb  Block7pgc_out.rtf  Block8.ipynb  Block8Resort.ipynb  GraphBlock4Task4_H.rtf  Temp.ipynb  Untitled.rtf  circo  lab1.pages
databases/coursework/: build.gradle
databases/coursework/scripts/: create.sql  data.sql  queries.sql  routines.sql  security.sql  triggers.sql
databases/hw1/: pet.txt  pet_db.txt
databases/hw2/: data_university.sql  university.sql
databases/hw3/: func.txt
databases/hw4/: Text.pages  data_university.sql  university.sql  Без названия.pages
databases/hw5/: create.sql
databases/hw6/: .tuples_datalog.sql.swp  hw6.sql  hw6.tex
databases/hw7/: init.sql
databases/hw8/db/gradle/wrapper/: gradle-wrapper.properties
databases/hw8/db/scripts/: general.sql  task1.sql  task2.sql
functional_programming/hw1/: hw1-test.tix  hw1.cabal
functional_programming/hw1/app/: Main.hs
functional_programming/hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs  Lib.hs
functional_programming/hw1/test/: Block1Spec.hs  Block2Spec.hs  Block3Spec.hs  Block4Spec.hs  Block5Spec.hs
functional_programming/hw2/: README.md  hw2.cabal
functional_programming/hw2/app/: Main.hs
functional_programming/hw2/src/: Block1.hs  Block2.hs  Block3Task11.hs  Block3Task12.hs  Block3Task13.hs  Block3Task14.hs  Block3Task15.hs  Block3Task16.hs  Block3Task1Shared.hs  Block3Task2.hs  Block4Task1.hs  Block4Task2.hs
functional_programming/hw2/test/: Block1Spec.hs  Block2Spec.hs  Block4Task1Spec.hs  Block4Task2Spec.hs
functional_programming/hw3/: README.md  hw3.cabal
functional_programming/hw3/app/: Main.hs
functional_programming/hw3/src/: Base.hs  Console.hs  Executor.hs  Expressions.hs  Interpreter.hs  Lexer.hs  Parser.hs  Variables.hs
functional_programming/hw3/src/programs/: fact.txt  fib.txt
functional_programming/hw3/test/: ExpressionsSpec.hs  InterpreterSpec.hs  VariablesSpec.hs
functional_programming/hw4/: README.md  hw4.cabal
functional_programming/hw4/src/: Benchmarks.hs  BenchmarksAlgorithms.hs  ComonadTask1.hs  ComonadTask2.hs  ComonadTask3.hs  LensTask1.hs  LensTask2.hs  LensTask3.hs  LensTask4.hs  LensTask5.hs  TemplateHaskellTask.hs  TemplateHaskellTaskMod.hs  TemplateHaskellTextShow.hs
functional_programming/hw4/test/: BasicLensSpec.hs
machine_learning/hw1/: ML_HW1.ipynb
machine_learning/hw2/: linear_regression.ipynb
machine_learning/hw3/: main.ipynb
machine_learning/hw4/: SVM.ipynb
machine_learning/hw5/: NonParametricRegression.ipynb
machine_learning/hw6/: mnist_on_numpy.ipynb
math_stat/monte_carlo/: Monte-Carlo method for volume.ipynb
optimization_methods/: Homework1.aux  Homework1.ipynb  Homework1.out  Homework1.tex  Homework2.ipynb
search/antispam/: AntispamStatsSeminar.ipynb  decorators.py  featureextractor.py  htmlparser.py  plots.py  tokens.py
search/duplicates/: broder_shingles.py  docreader.py  run.sh
search/ts-idx-2018/: docreader.py  index.py  index.sh  node.py  preinstall.sh  queryids.py  search.py  simple9.py  temp.py  varbyte.py
software_architecture/actors/: build.gradle
software_architecture/actors/gradle/wrapper/: gradle-wrapper.properties
software_architecture/actors/src/main/kotlin/: Main.kt
software_architecture/actors/src/main/kotlin/actor/: MasterSearchActor.kt  SearchActorProvider.kt  SearchActorProviderImpl.kt
software_architecture/actors/src/main/kotlin/client/: SearchClient.kt
software_architecture/actors/src/main/kotlin/entity/: CombinedResponse.kt  SearchEngine.kt  SearchRequest.kt  SearchResponse.kt
software_architecture/actors/src/main/kotlin/server/: StubServer.kt
software_architecture/aspects/: build.gradle  local.properties
software_architecture/aspects/app/: build.gradle
software_architecture/aspects/app/src/main/: AndroidManifest.xml
software_architecture/aspects/gradle/wrapper/: gradle-wrapper.properties
software_architecture/bridge/gradle/wrapper/: gradle-wrapper.properties
software_architecture/clock/: build.gradle  settings.gradle
software_architecture/clock/gradle/wrapper/: gradle-wrapper.properties
software_architecture/lru_cache/: build.gradle
software_architecture/lru_cache/gradle/wrapper/: gradle-wrapper.properties
software_architecture/lru_cache/src/main/java/: Main.java
software_architecture/mock_tests/: build.gradle
software_architecture/mock_tests/gradle/wrapper/: gradle-wrapper.properties
software_architecture/mock_tests/src/main/java/: Main.java
software_architecture/parser/: build.gradle
software_architecture/parser/gradle/wrapper/: gradle-wrapper.properties
software_architecture/parser/src/main/kotlin/: Main.kt
software_architecture/reactive/: build.gradle
software_architecture/reactive/gradle/wrapper/: gradle-wrapper.properties
software_architecture/refactoring/: pom.xml  prod.db  test.db  testing.db
software_architecture/todo_list/: build.gradle
software_architecture/todo_list/app/: build.gradle
software_architecture/todo_list/app/src/main/: AndroidManifest.xml
translation_methods/functional_translation/: build.gradle  run.bash  settings.gradle
translation_methods/functional_translation/gradle/wrapper/: gradle-wrapper.properties
translation_methods/functional_translation/src/main/java/: translated.py
translation_methods/pascal_array_parser/: .gitignore  Cargo.toml  README.md  description.md  tree.txt
translation_methods/pascal_array_parser/src/: lib.rs  main.rs  utils.rs
translation_methods/pascal_array_parser/src/core/: analyzer.rs  array_parser.rs  mod.rs  tree.rs
(+140 files in other folders)
