name:                hw1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hw1#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Block1, Block2, Block3, Block4, Block5
  build-depends:       base >= 4.7 && < 5
  default-extensions:  AllowAmbiguousTypes
                       DuplicateRecordFields
                       ExistentialQuantification
                       ExplicitForAll
                       MultiParamTypeClasses
                       Rank2Types
                       RankNTypes
                       ScopedTypeVariables
                       TypeApplications
  default-language:    Haskell2010

executable hw1-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw1
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Block1Spec
                       Block2Spec
                       Block3Spec
                       Block4Spec
                       Block5Spec
  build-depends:       base
                     , hw1
                     , hspec == 2.*
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hw1
