name:                hw2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hw2#readme
license:             BSD3
license-file:        LICENSE
author:              Uladizslau Sazanovich
maintainer:          zerogerc@gmail.com
copyright:           2017 Uladzislau Sazanovich
category:            Haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Block1,
                       Block2,
                       Block3Task1Shared,
                       Block3Task11,
                       Block3Task12,
                       Block3Task13,
                       Block3Task14,
                       Block3Task15,
                       Block3Task16,
                       Block3Task2,
                       Block4Task1,
                       Block4Task2
  build-depends:       base >= 4.7 && < 5
  default-extensions:  TypeOperators,
                       NoImplicitPrelude,
                       FlexibleInstances,
                       UndecidableInstances
  default-language:    Haskell2010

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw2
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Block1Spec, Block2Spec, Block4Task1Spec, Block4Task2Spec
  build-depends:       base
                     , hw2
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hw2
