name:                hw4
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hw4#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TemplateHaskellTask
                     , TemplateHaskellTaskMod
                     , TemplateHaskellTextShow
                     , LensTask1
                     , LensTask2
                     , LensTask3
                     , LensTask4
                     , LensTask5
                     , ComonadTask1
                     , ComonadTask2
                     , ComonadTask3
                     , Benchmarks
                     , BenchmarksAlgorithms
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , megaparsec
                     , mtl
                     , exceptions
                     , template-haskell
                     , text
                     , microlens
                     , directory
                     , filepath
                     , lens
                     , criterion
                     , unordered-containers
                     , hashable
                     , random
                     , comonad
                     , split
  default-extensions:  TemplateHaskell
                     , QuasiQuotes
                     , Rank2Types
                     , RankNTypes
                     , LambdaCase
                     , TypeApplications
                     , MultiParamTypeClasses
                     , OverloadedStrings
  default-language:    Haskell2010

executable hw4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw4
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       BasicLensSpec
  build-depends:       base
                     , hw4
                     , hspec
                     , QuickCheck
                     , containers
                     , megaparsec
                     , mtl
                     , exceptions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hw4
